# lifegame-cpp

./: .gitignore  CMakeLists.txt  README.md  life_game.cpp
