CMAKE_MINIMUM_REQUIRED(VERSION 3.5)

PROJECT(lifegame-cpp)

ENABLE_LANGUAGE(CXX)
SET(CMAKE_CXX_STANDARD 14)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_CXX_FLAGS "-Wall ${CMAKE_CXX_FLAGS}")
SET(CMAKE_CXX_FLAGS_RELEASE "-O3 ${CMAKE_CXX_FLAGS}")

ADD_EXECUTABLE(life_game life_game.cpp)
